# kit

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts
apps/guide/: package.json
apps/primary/: package.json  vite.config.ts
apps/primary/src/: main.tsx
crates/kit/: Cargo.toml  tauri.conf.json
crates/kit-api/: Cargo.toml
crates/kit-api/src/: lib.rs
crates/kit-plugin/: Cargo.toml
crates/kit-settings/: Cargo.toml
crates/kit-tauri/: Cargo.toml  tauri.conf.json
crates/kit-tauri/capabilities/: default.json
crates/kit-tauri/src/: commands.rs  lib.rs  main.rs
crates/kit-tauri/src/cmd/: window.rs
crates/kit-tauri/src/core/: tray.rs
crates/kit/capabilities/: default.json
crates/kit/src/: lib.rs  tray.rs
docs/: 插件系统.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/icon/: index.tsx  logo-icon.tsx  types.tsx
src/components/ui/: command.tsx
src/pages/command/: command.tsx
