[workspace]
members = ["crates/kit-tauri", "crates/kit-settings", "crates/kit-plugin"]
resolver = "2"

[workspace.package]
authors = ["kit-tool"]
repository = "https://github.com/kit-tool/kit"
categories = ["tools"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[workspace.dependencies]

tokio = { version = "1.42.0", default-features = false }

kit-plugin = { path = "crates/kit-plugin" }
kit-settings = { path = "crates/kit-plugin" }
