[package]
name = "kit-tauri"
version = "0.0.0"
authors = ["kit-tool"]
edition = "2021"

# [lib]
# name = "kit-tauri"
# crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

kit-plugin.workspace = true
